# huji-cs-c-cpp-workshop

./: .gitignore  README.md
ex1/Cipher/: CMakeLists.txt
ex1/Cipher/Cipher/: CMakeLists.txt  cipher.c  cipher.h  main.c  tests.c
ex2/: CMakeLists.txt
ex2/ex2/: CMakeLists.txt  main.c  sort_bus_lines.c  sort_bus_lines.h  test_bus_lines.c  test_bus_lines.h
ex3/: CMakeLists.txt
ex3/ex3/: CMakeLists.txt  linked_list.c  linked_list.h  markov_chain.c  markov_chain.h  tweets_generator.c
ex3b/ex3/: CMakeLists.txt  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
ex4/: CMakeLists.txt
ex4/ex4/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Makefile  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  main.cpp  plot_img.py  presubmit.cpp  temp_main.cpp
ex4/ex4/images/: im1  im2  im3  im4  im6  im7  im8  im9
ex4/ex4/parameters/: b2  b3  w3  w4
ex4/ex4/presubmit_io/: TestAST_1.info  TestAST_1.match  presubmit.inb1  presubmit.inb4  presubmit.inw1  presubmit.inw2
ex5/: CMakeLists.txt
ex5/ex5/: CMakeLists.txt  Movie.cpp  Movie.h  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  RecommendationSystemLoader_input.txt  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h  UsersLoader_input.txt  presubmit.cpp  print_main.cpp  print_main_out.txt  temp_main.cpp
ex5/ex5/test_io/: presubmit.in_m  presubmit.in_m15  presubmit.in_m16  presubmit.in_m5  presubmit.in_m6  presubmit.in_m7  presubmit.in_u  presubmit.in_u14  presubmit.in_u16  presubmit.in_u4  presubmit.in_u5  presubmit.in_u6  presubmit.in_u7
